Fetch the data on the daily component

--- a/src/app/components/daily/daily.component.html
+++ b/src/app/components/daily/daily.component.html
@@ -1,10 +1,14 @@
 <div class="daily">
   <div class="container">
-    <mat-card class="daily--card">
-      <mat-card-content>
-        <img src="../../../assets/images/rain.png" alt="Rain" />
-        <h1>{{ weatherData?.location?.city }}</h1>
-      </mat-card-content>
-    </mat-card>
+    <ul class="d-flex">
+      <li *ngFor="let day of weatherData?.forecasts">
+        <mat-card class="daily--card mx-2">
+          <mat-card-content>
+            <img src="../../../assets/images/rain.png" alt="Rain" *ngIf="" />
+            <h1>{{ day.day }}</h1>
+          </mat-card-content>
+        </mat-card>
+      </li>
+    </ul>
   </div>
 </div>
