--- a/src/app/components/weather-data/weather-data.component.scss
+++ b/src/app/components/weather-data/weather-data.component.scss
@@ -12,7 +12,7 @@
 
   &--upper {
     width: 90%;
-    height: 600px;
+    height: auto;
     margin: auto;
     overflow: hidden;
     border-radius: 20px;
