--- a/src/app/components/weather-data/weather-data.component.html
+++ b/src/app/components/weather-data/weather-data.component.html
@@ -22,7 +22,7 @@
       />
 
       <div class="weather--upper-data">
-        <div class="location">Manila</div>
+        <div class="location">{{ weatherData?.location?.city }}</div>
         <div class="country">Philippines</div>
         <div class="temperature">30&#8451;</div>
         <div class="line"></div>
