--- a/src/app/components/daily/daily.component.scss
+++ b/src/app/components/daily/daily.component.scss
@@ -1,6 +1,26 @@
 .daily {
   &--card {
     width: 120px;
-    height: 150px;
+    height: 170px;
+
+    &-content {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+
+      .daily {
+        font-size: 1.1rem;
+        font-weight: bold;
+      }
+
+      .weather {
+        font-size: 0.8rem;
+      }
+
+      .temperature {
+        font-size: 0.8rem;
+      }
+    }
   }
 }
