--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&family=Oswald:wght@200;400;500;600;700&display=swap");
 
 * {
   margin: 0;
@@ -6,19 +6,14 @@
   box-sizing: border-box;
 }
 
-body {
-  font-family: "Lato", sans-serif;
-  font-size: 1rem;
-  font-weight: 400;
+ul {
+  list-style-type: none;
 }
 
-html,
 body {
-  height: 100%;
-}
-body {
-  margin: 0;
-  font-family: Roboto, "Helvetica Neue", sans-serif;
+  font-family: "Oswald", sans-serif !important;
+  font-size: 1rem;
+  font-weight: 400;
 }
 
 p {
